Fix z-index of hamburger menu

--- a/src/style.css
+++ b/src/style.css
@@ -316,6 +316,7 @@ h2:not(.homepage-box-title), h3, h4 {
 
     margin: 0;
     padding: 0;
+    z-index: 50;
   }
   .burger-menu-list {
     display:flex;
